--- a/.github/workflows/esp8266.yml
+++ b/.github/workflows/esp8266.yml
@@ -13,3 +13,7 @@ jobs:
       run: docker build -t thing.coap - < ./Docker/Arduino.Dockerfile
     - name: Build Client Example
       run: docker run -v$(pwd):/root/Arduino/libraries/Thing.CoAP/ thing.coap arduino-cli compile --fqbn esp8266:esp8266:generic /root/Arduino/libraries/Thing.CoAP/examples/ESP8266/Client
+    - name: Build Client-Discovery Example
+      run: docker run -v$(pwd):/root/Arduino/libraries/Thing.CoAP/ thing.coap arduino-cli compile --fqbn esp8266:esp8266:generic /root/Arduino/libraries/Thing.CoAP/examples/ESP8266/Client-Discovery
+    - name: Build Server-InlineEndpoint Example
+      run: docker run -v$(pwd):/root/Arduino/libraries/Thing.CoAP/ thing.coap arduino-cli compile --fqbn esp8266:esp8266:generic /root/Arduino/libraries/Thing.CoAP/examples/ESP8266/Server-InlineEndpoint
