--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -14,7 +14,7 @@ jobs:
     - name: autoreconf
       run: autoreconf -i
     - name: configure
-      run: ./configure
+      run: ./configure CXXFLAGS=-Werror
     - name: make
       run: make
     - name: make check
